# knotifications

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5NotificationsConfig.cmake.in  KF6NotificationsConfig.cmake.in  Mainpage.dox  README.md  conanfile.py  metainfo.yaml
autotests/: CMakeLists.txt  fake_notifications_server.cpp  fake_notifications_server.h  knotification_test.cpp  qtest_dbus.h
autotests/knotifications5/: qttest.notifyrc
cmake/modules/: FindGradle.cmake
docs/: Doxyfile.local  qml-notifications.md
examples/: CMakeLists.txt  actiontest.cpp  notificationtester.cpp  notificationtester.qml  resources.qrc
examples/android/: AndroidManifest.xml
po/af/: knotifications5_qt.po
po/ar/: knotifications5_qt.po
po/as/: knotifications5_qt.po
po/ast/: knotifications5_qt.po
po/az/: knotifications5_qt.po
po/be/: knotifications5_qt.po
po/be@latin/: knotifications5_qt.po
po/bg/: knotifications5_qt.po
po/bn/: knotifications5_qt.po
po/bn_IN/: knotifications5_qt.po
po/br/: knotifications5_qt.po
po/bs/: knotifications5_qt.po
po/ca/: knotifications5_qt.po
po/ca@valencia/: knotifications5_qt.po
po/crh/: knotifications5_qt.po
po/cs/: knotifications5_qt.po
po/csb/: knotifications5_qt.po
po/cy/: knotifications5_qt.po
po/da/: knotifications5_qt.po
po/de/: knotifications5_qt.po
po/el/: knotifications5_qt.po
po/en_GB/: knotifications5_qt.po
po/eo/: knotifications5_qt.po
po/es/: knotifications5_qt.po
po/et/: knotifications5_qt.po
po/eu/: knotifications5_qt.po
po/fa/: knotifications5_qt.po
po/fi/: knotifications5_qt.po
po/fr/: knotifications5_qt.po
po/fy/: knotifications5_qt.po
po/ga/: knotifications5_qt.po
po/gd/: knotifications5_qt.po
po/gl/: knotifications5_qt.po
po/gu/: knotifications5_qt.po
po/ha/: knotifications5_qt.po
po/he/: knotifications5_qt.po
po/hi/: knotifications5_qt.po
po/hne/: knotifications5_qt.po
po/hr/: knotifications5_qt.po
po/hsb/: knotifications5_qt.po
po/hu/: knotifications5_qt.po
po/hy/: knotifications5_qt.po
po/ia/: knotifications5_qt.po
po/id/: knotifications5_qt.po
po/is/: knotifications5_qt.po
po/it/: knotifications5_qt.po
po/ja/: knotifications5_qt.po
po/ka/: knotifications5_qt.po
po/kk/: knotifications5_qt.po
po/km/: knotifications5_qt.po
po/kn/: knotifications5_qt.po
po/ko/: knotifications5_qt.po
po/ku/: knotifications5_qt.po
po/lb/: knotifications5_qt.po
po/lt/: knotifications5_qt.po
po/lv/: knotifications5_qt.po
po/mai/: knotifications5_qt.po
po/mk/: knotifications5_qt.po
po/ml/: knotifications5_qt.po
po/mr/: knotifications5_qt.po
po/ms/: knotifications5_qt.po
po/nb/: knotifications5_qt.po
po/nds/: knotifications5_qt.po
po/ne/: knotifications5_qt.po
po/nl/: knotifications5_qt.po
po/nn/: knotifications5_qt.po
po/oc/: knotifications5_qt.po
po/or/: knotifications5_qt.po
po/pa/: knotifications5_qt.po
po/pl/: knotifications5_qt.po
po/ps/: knotifications5_qt.po
po/pt/: knotifications5_qt.po
po/pt_BR/: knotifications5_qt.po
po/ro/: knotifications5_qt.po
po/ru/: knotifications5_qt.po
po/se/: knotifications5_qt.po
po/si/: knotifications5_qt.po
po/sk/: knotifications5_qt.po
po/sl/: knotifications5_qt.po
po/sq/: knotifications5_qt.po
po/sr/: knotifications5_qt.po
po/sr@ijekavian/: knotifications5_qt.po
po/sr@ijekavianlatin/: knotifications5_qt.po
po/sr@latin/: knotifications5_qt.po
po/sv/: knotifications5_qt.po
po/ta/: knotifications5_qt.po
po/te/: knotifications5_qt.po
po/tg/: knotifications5_qt.po
po/th/: knotifications5_qt.po
po/tr/: knotifications5_qt.po
po/tt/: knotifications5_qt.po
po/ug/: knotifications5_qt.po
po/uk/: knotifications5_qt.po
po/uz/: knotifications5_qt.po
po/uz@cyrillic/: knotifications5_qt.po
po/vi/: knotifications5_qt.po
po/wa/: knotifications5_qt.po
po/x-test/: knotifications5_qt.po
po/xh/: knotifications5_qt.po
po/zh_CN/: knotifications5_qt.po
po/zh_HK/: knotifications5_qt.po
po/zh_TW/: knotifications5_qt.po
python/: CMakeLists.txt  bindings.h  bindings.xml
python/examples/: notification.py
src/: CMakeLists.txt  KF5Notifications-android-dependencies.xml  KF6Notifications-android-dependencies.xml  Messages.sh  android_defaults.notifyrc  config-knotifications.h.cmake  debug_p.cpp  debug_p.h  imageconverter.cpp  imageconverter.h  knotification.cpp  knotification.h  knotification_p.h  knotificationconfiguration.cpp  knotificationconfiguration.h  knotificationjobuidelegate.cpp  knotificationjobuidelegate.h  knotificationmanager.cpp  knotificationmanager_p.h  knotificationpermission.cpp  knotificationpermission.h  knotificationplugin.cpp  knotificationplugin.desktop  knotificationplugin.h  knotificationreplyaction.cpp  knotificationreplyaction.h  knotificationrestrictions.cpp  knotificationrestrictions.h  knotifications-index.qdoc  knotifications.qdoc  knotifications.qdocconf  knotifications.qrc  knotifyconfig.cpp  knotifyconfig.h  knotifyplugin.cpp  knotifyplugin.h  kpassivepopup.cpp  kpassivepopup.h  kstatusnotifieritem.cpp  kstatusnotifieritem.h  (+38 more)
src/android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
src/android/org/kde/knotifications/: KNotification.java  KNotificationConfiguration.java  NotifyByAndroid.java
src/libdbusmenu-qt/: com.canonical.dbusmenu.xml  dbusmenu_p.cpp  dbusmenu_p.h  dbusmenuexporter.cpp  dbusmenuexporter.h  dbusmenuexporterdbus_p.cpp  dbusmenuexporterdbus_p.h  dbusmenuexporterprivate_p.h  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  debug_p.h  utils.cpp  utils_p.h
src/org/kde/knotifications/: NotifyByAndroid.java
src/qml/: CMakeLists.txt  knotificationqmlplugin.cpp  knotificationqmlplugin.h  knotificationsqml.qdoc  knotificationsqml.qdocconf  qmldir
tests/: CMakeLists.txt  knotificationdbustest.cpp  knotificationrestrictionstest.cpp  kpassivepopuptest.cpp  kpassivepopuptest.h  kstatusnotifieritemtest.cpp  kstatusnotifieritemtest.h  unitylaunchertest.cpp
(+237 files in other folders)
